# heykevin

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY-SETUP.md  Dockerfile  FIXPLAN.md  HANDOFF-GEMINI.md  HANDOFF-SUBSCRIPTION.md  HANDOFF.md  firestore.rules  kevin-prd.md  pyproject.toml
.claude/: deploy-config.yaml
.claude/commands/: deploy-staging.md  promote-production.md
.github/workflows/: deploy.yml  rollback.yml
app/: config.py  main.py
app/api/: admin.py  calls.py  contacts.py  contractors.py  estimates.py  forwarding.py  integrations.py  knowledge.py  settings.py  subscription.py  vcard.py  voip.py
app/db/: cache.py  calls.py  contacts.py  contractors.py  firestore_client.py  jobs.py  knowledge.py
app/middleware/: auth.py  telegram_verify.py  twilio_verify.py
app/services/: adaptive_trust.py  ai_estimate.py  calendar.py  circuit_breaker.py  conference.py  entitlements.py  gemini_agent.py  gemini_pipeline.py  job_card.py  jobber.py  knowledge_base.py  lookup.py  post_call.py  push_notification.py  quiet_hours.py  routing.py  scoring.py  sms.py  state_machine.py  subscription.py  telegram_bot.py  transcriber.py  vapi_agent.py  vcard.py  voice_pipeline.py  warm_transfer.py
app/static/: admin.html
app/utils/: audio.py  error_handlers.py  logging.py  phone.py
app/webhooks/: appstore.py  media_stream.py  telegram_callback.py  twilio_incoming.py  vapi_events.py
docs/: call-detail-redesign-preview.html  pricing-competitive-strategy.md  voice-latency-optimization.md
docs/superpowers/plans/: 2026-04-07-gemini-live-pipeline.md  2026-04-07-internationalization-REVIEW.md  2026-04-07-internationalization.md
ios/: project.yml
ios/Kevin/: Info.plist  Localizable.xcstrings  Products.storekit
ios/Kevin.xcodeproj/: project.pbxproj
ios/Kevin/App/: AppDelegate.swift  (+1 more)
scripts/: prototype_gemini_bridge.py  prototype_vapi_conference.py  verify_environment_isolation.sh
tests/unit/: test_contractor_mode.py  test_jobber.py  test_phone.py  test_receptionist_intelligence.py  test_routing.py  test_runtime_safety.py  test_scoring.py  test_state_machine.py  test_subscription_verification.py  test_twilio_provisioning.py
(+42 files in other folders)
