[project]
name = "kevin"
version = "0.1.0"
description = "AI-powered call screening assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "twilio==9.10.4",
    "httpx==0.28.1",
    "python-telegram-bot==21.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "phonenumbers==9.0.26",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.20",
    "google-cloud-firestore==2.21.0",
    "firebase-admin==7.1.0",
    "google-cloud-secret-manager==2.16.4",
    "google-cloud-tasks==2.21.0",
    "google-cloud-logging==3.12.1",
    "slowapi==0.1.9",
    "websockets==15.0.1",
    "PyJWT[crypto]==2.10.1",
    "cryptography>=42.0.0",
    "httpx[http2]==0.28.1",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
